--- a/si.tex
+++ b/si.tex
@@ -141,19 +141,14 @@
 
 Here, we describe how we identified morphemes from corpus data and arrived at the classification of morphemes in the six languages as described in the main paper.
 
-\subsection{General Remarks}
-In order to create these morpheme orderings, we first need to identify and label morphemes for each language. The Korean, Japanese, and Sesotho corpora have words segmented into the grapheme representations of their morphemes. However, the Turkish, Hungarian, and Finnish corpora do not segment the words into morphemes, but rather include a list of features (such as person, number, voice, etc.) present in each word. We built segmenters to reconstruct the order of morphemes in each word from those feature labels. See SI Appendix Section X for details.
-%
-%
-% Grapheme, label, phoneme for Korean \mhahn{For now, I think we can place grapheme and phoneme versions into the appendix, and only discuss the MorphemeMeanings-based one in the main paper (i.e., ordering based on morpheme meanings, surprisal based on abstract morphemes, analogous to the Coarse+FineSurprisal version for the other languages.}
+%\subsection{General Remarks}
+%In order to collect morpheme ordering data, we first need to identify and label morphemes for each language. The Korean, Japanese, and Sesotho corpora have words segmented into the grapheme representations of their morphemes. However, the Turkish, Hungarian, and Finnish corpora do not segment the words into morphemes, but rather include a list of features (such as person, number, voice, etc.) present in each word. We built segmenters to reconstruct the order of morphemes in each word from those feature labels. 
 
-    The Korean corpus came with segmented morphemes labeled with fine-grained categories such as "ending final marker," or "predicative maker," which were the labels we used for the specific morpheme meaning segmenter. We also built a segmenter to take in each segment and output the abstract morpheme slot it fills (such as ``formality"), similar to the abstract slot labelling we did with Turkish, Hungarian, and Finnish. 
-%
-% \mhahn{In the main paper, I think it's enough to present the Coarse+FinalSurprisal results. We can present others in the appendix, and don't need to introduce them here in detail.} 
+%The Korean corpus came with segmented morphemes labeled with fine-grained categories such as "ending final marker," or "predicative maker," which were the labels we used for the specific morpheme meaning segmenter. We also built a segmenter to take in each segment and output the abstract morpheme slot it fills (such as ``formality"), similar to the abstract slot labelling we did with Turkish, Hungarian, and Finnish. 
 
-We built two different segmenters for each of the Turkish, Hungarian, and Finnish corpora. One version was ``coarse-grained," meaning that we recovered the order of suffixes in the word on an abstract level, such as a list of ``subject person, subject number." The other version was ``fine-grained," meaning that we used more specific labels for each suffix, such as ``2nd person, plural." In the models, each word is represented as its list of coarse-grained labels, and the model tries to predict the fine-grained labels based on the coarse-grained abstract morphemes. As such, the model tries to order the fine-grained labels, but the surprisal is calculated on the basis of the coarse-grained abstract morphemes.
+%We built two different segmenters for each of the Turkish, Hungarian, and Finnish corpora. One version was ``coarse-grained," meaning that we recovered the order of suffixes in the word on an abstract level, such as a list of ``subject person, subject number." The other version was ``fine-grained," meaning that we used more specific labels for each suffix, such as ``2nd person, plural." In the models, each word is represented as its list of coarse-grained labels, and the model tries to predict the fine-grained labels based on the coarse-grained abstract morphemes. As such, the model tries to order the fine-grained labels, but the surprisal is calculated on the basis of the coarse-grained abstract morphemes.
     
-We built segmenters on two different levels of abstraction for the Finnish, Hungarian, and Turkish corpora. The more fine-grained segmenter version takes the list of morphological features present in a particular word and reconstructs the natural order of morphemes, labelling each morpheme with its specific meaning, such as ``2nd person plural subject." The more abstract segmenter takes the list of morphological features for each word and reconstructs the filled abstract morpheme slots for that word, where each slot has generic label such as ``agreement." For example, in Hungarian, the only possible slots of suffixes appearing after a verb root are voice, mood, tense, agreement, and clitics. As such, we can assign each slot an integer representing the order in which the slots can be filled in a certain language. 
+%We built segmenters on two different levels of abstraction for the Finnish, Hungarian, and Turkish corpora. The more fine-grained segmenter version takes the list of morphological features present in a particular word and reconstructs the natural order of morphemes, labelling each morpheme with its specific meaning, such as ``2nd person plural subject." The more abstract segmenter takes the list of morphological features for each word and reconstructs the filled abstract morpheme slots for that word, where each slot has generic label such as ``agreement." For example, in Hungarian, the only possible slots of suffixes appearing after a verb root are voice, mood, tense, agreement, and clitics. As such, we can assign each slot an integer representing the order in which the slots can be filled in a certain language. 
 
 \subsection{Korean Verb Suffixes}
 
@@ -276,7 +271,7 @@ TAM2      & MUS2$_7$ & Aorist/Imperfective, indirect & -mIş & \cite{schaaik2020
 Gen & \\
 \hline
 \end{tabular}
-	\caption{Verb suffixes in Turkish, arranged by slot. The first column describes slots as in Table \mhahn{TODO} of the main paper. The second column lists the unique identifiers for each morpheme. The third column describes the function and meaning; the fourth column describes the phonological form (see Section~\ref{sec:vowel-harmony} for the meaning of the vowels I, A, E).}\label{tab:turkish-suffixes}
+	\caption{Verb suffixes in Turkish, arranged by slot. The first column describes slots as in the main paper. The second column lists the unique identifiers for each morpheme. The third column describes the function and meaning; the fourth column describes the phonological form (see Section~\ref{sec:vowel-harmony} for the meaning of the vowels I, A, E).}\label{tab:turkish-suffixes}
 \end{table}
 
 
@@ -394,7 +389,8 @@ ismerjed &	ismerje &	ismerjük &	ismerjétek & ismerjék
 %	    &&& \textsc{j}-\textsc{elek} \\
     \end{tabular}
     }
-    \caption{Hungarian verb suffixes (tense, mood, definitiness, person/number). ``Ind'' = ``Indicative'', ``Cond'' = ``Conditional'', ``Subj'' = ``Subjunctive'', ``I'' = ``Indefinite'', ``D'' = ``Definite''.}
+    \caption{Hungarian verb suffixes: Inflection by tense, mood, definitiness, and person/number. ``Ind'' = ``Indicative'', ``Cond'' = ``Conditional'', ``Subj'' = ``Subjunctive'', ``I'' = ``Indefinite'', ``D'' = ``Definite''.
+    For each form, we show the orthographic shape for three verbs, the suffix as identified by \citet{rounds2001hungarian}, and our representation as a string of morphemes as described in Table~\ref{tab:hungarian-suffixes}.}
     \label{tab:hungarian-paradigms}
 \end{table}
 
@@ -503,6 +499,8 @@ We represent words as sequences of abstract morphemes.
 In many languages, morphemes are subject to morphophonological changes depending on the other morphemes that they occur with, which means that morphemes can be expressed as different phoneme sequences depending on the environment.
 Such changes could be taken into account by explicitly distinguishing between different phonological expressions of the same morpheme.
 In most cases, such morphophonological processes only affect neighboring morphemes, but sometimes they involve interactions between non-adjacent morphemes.
+We asked whether our findings about the efficiency of verb suffix ordering continues to hold when explicitly account for morphophonological interactions between non-adjacent morphemes.
+
 Among the languages in our sample, this is instantiated most extensively by Turkish vowel harmony.
 Turkish vowel harmony can largely be described in terms of two underlying vowels ``A'' and ``I'' whose realization depends on the last preceding vowel, as follows:
 
@@ -521,8 +519,7 @@ The suffix AR$_6$ has the form ``Ar'' after most monosyllabic stems, and ``Ir'' 
 
 Vowel harmony can create dependencies between non-adjacent morphemes because the vowel of one morpheme can determine the vowels of multiple subsequent morphemes containing the vowels A or I.
 
-
-We asked whether our findings about the efficiency of Turkish verb suffix ordering continues to hold when explicitly account for vowel harmony.
+We asked whether our findings about the efficiency of verb suffix ordering continues to hold when explicitly account for vowel harmony.
 That is, we applied the same rules for vowel harmony to hypothetical affix orderings, and encoded realizations of the same morpheme differently when they are assigned different vowels.
 We repeated the same experiments as in the main paper, (i) comparing the AUC to other orderings, and (ii) comparing the optimized and real orderings.
 Results are shown in Figure~\ref{fig:turkish-harmony-results}.
@@ -531,7 +528,20 @@ Real orderings have a lower AUC than almost all alternative orderings even when 
 Furthermore, optimized orderings recover the real orderings with higha ccuracy both in the ordering of the slots and in predicting orders for forms in the dataset \mhahn{TODO result}.
 
 
-\mhahn{TODO report results}
+\section{Other Measures of Accuracy}
+
+
+
+\begin{figure}[]
+    \centering
+\includegraphics[width=0.8\textwidth]{figures/accuracies_verbs.pdf}
+    \caption{Accuracies in predicting verb morpheme ordering.
+    For the baselines, we provide both a smoothed violin plot of the distribution of accuracies, and the mean accuracy as a horizontal line (green and blue). For the optimized order, we show the accuracy as a horizontal line (red).
+    In all languages, optimized orderings provide higher accuracy than the mean of the random baselines at $p<0.001$.}
+    \label{tab:optimized_acc_verbs}
+\end{figure}
+
+
 
 \bibliography{literature}
 \bibliographystyle{natbib}
